# CMakeStudy

./: .gitignore  README.md
Test_01/: CMakeLists.txt  README.txt  hello.cpp  hello.h  main.cpp
Test_02/: CMakeLists.txt  README.txt  hello.cpp  main.cpp
Test_02/include/: hello.h
Test_03/: CMakeLists.txt  README.txt  main.cpp
Test_03/Math/: CMakeLists.txt  mysqrt.cpp  mysqrt.h
